# Intellix-Company

./: CNAME  Intellix Company.csproj  LICENSE  README.md  about.html  contact.html  dashboard.html  features.html  globalfinder.html  home.html  index.html  netlify.toml  support.html  vercel.json
Intellix-Company-main/: Intellix Company.sln  README.md  about.html  globalfinder.html  index.html  login.html  roadmap.html  social.html
Intellix-Company-main/intellix-website/intellix-project/src/: README.md
Intellix-Company-main/intellix-website/intellix-project/src/rust/: Cargo.toml
Intellix-Company-main/src/go/: blockchain_listener.go
Intellix-Website (1)/intellix-repo/: index.html
IntellixCompany/: IntellixCompany.sqlproj
core website pages/: about.html  dashboard.html  features.html  home.html  logout.html  signup.html
intellix-project/: index.html
intellix-project/src/python/: fraud_engine.py
intellix-project/src/sql/: analytics.sql
intellix-project/src/swift/: BiometricAuth.swift
intellix-website/intellix-project/: index.html
intellix-website/intellix-project/src/rust/: crypto_engine.rs
intellix-website/intellix-project/src/typescript/: payment.service.ts
src/go/: go.mod
src/typescript/: package.json
