[package]
name = "intellix-crypto-engine"
version = "1.0.0"
edition = "2021"
description = "Intellix high-performance transaction signing engine"
authors = ["Intellix Engineering <eng@intellix.io>"]

[[bin]]
name = "crypto_engine"
path = "crypto_engine.rs"

[dependencies]
# Production dependencies (uncomment for real use):
# secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
# sha3 = "0.10"
# hmac = "0.12"
# bip32 = "0.5"
# hex = "0.4"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
